--- a/docs/content/guides/developer/coin/loyalty.mdx
+++ b/docs/content/guides/developer/coin/loyalty.mdx
@@ -2,13 +2,13 @@
 title: Loyalty Tokens
 ---
 
-Using the Sui [Closed-Loop Token](../../../../standards/closed-loop-token.mdx) standard, you can create tokens that are valid only for a specific service, like an airline that wants to grant tokens to frequent flyers to purchase tickets or upgrades. 
+Using the Sui [Closed-Loop Token](../../../standards/closed-loop-token.mdx) standard, you can create tokens that are valid only for a specific service, like an airline that wants to grant tokens to frequent flyers to purchase tickets or upgrades. 
 
 The following example demonstrates the creation of a loyalty token that bearers can use to make purchases in a digital gift shop.
 
 ## Example
 
-The Loyalty Token example illustrates a loyalty token that is created with the [Closed Loop Token standard](../../../standards/closed-loop-token.mdx). If you were to implement this example, the Admin would send `LOYALTY` tokens to the users of your service as a reward for their loyalty. The example creates a `GiftShop` where holders can spend `LOYALTY` tokens to buy `Gift`s.
+The Loyalty Token example illustrates a loyalty token that is created with the Closed Loop Token standard. If you were to implement this example, the Admin would send `LOYALTY` tokens to the users of your service as a reward for their loyalty. The example creates a `GiftShop` where holders can spend `LOYALTY` tokens to buy `Gift`s.
 
 ### examples::loyalty
 
@@ -43,7 +43,7 @@ Toggle complete source code
 
 ## Related links
 
-- [Closed Loop Token standard](../../../../standards/closed-loop-token.mdx): Details for the standard used to create tokens on Sui.
+- [Closed Loop Token standard](../../../standards/closed-loop-token.mdx): Details for the standard used to create tokens on Sui.
 - [Source code](https://github.com/MystenLabs/sui/blob/main/examples/move/token/sources/loyalty.move): The source code in GitHub for this example.
 - [In-Game Tokens](./in-game-token.mdx): Example of how to create tokens for use as in-game currency.
 - [Regulated Coin and Deny List](./regulated.mdx): Example of how to create regulated coins on the Sui network.
