--- a/docs/content/guides/developer/nft.mdx
+++ b/docs/content/guides/developer/nft.mdx
@@ -32,5 +32,5 @@ The complete, commented code for the example follows.
 ## Related links
 
 - [NFT Rental](./nft/nft-rental.mdx): Example that rents NFTs using Kiosk Apps. 
-- [Kiosk](../standards/kiosk.mdx): Asset storage on the Sui network.
-- [Kiosk Apps](../standards/kiosk-apps.mdx): Extend the functionality of the Kiosk standard. 
+- [Kiosk](../../standards/kiosk.mdx): Asset storage on the Sui network.
+- [Kiosk Apps](../../standards/kiosk-apps.mdx): Extend the functionality of the Kiosk standard. 
