--- a/docs/content/guides/developer/coin/regulated.mdx
+++ b/docs/content/guides/developer/coin/regulated.mdx
@@ -7,11 +7,11 @@ The Sui [Coin](../../../standards/coin.mdx) standard provides a `create_regulate
 
 Behind the scenes, `create_regulated_currency` uses the `create_currency` function to create the coin, but also produces a `DenyCap` object that allows its bearer to control access to the coin's deny list in a `DenyList` object. Consequently, the way to create a coin using `create_regulated_currency` is similar to the previous example, with the addition of a transfer of the `DenyCap` object to the module publisher.
 
-{@inject: examples/move/coin/sources/regcoin.move}
+{@inject: examples/move/coin/sources/regcoin.move#regulate}
 
 When you deploy the previous module using `sui client publish`, the console responds with transaction effects, including the creation of the following objects:
 
-```shell
+```sh
 ...
 
 Object Changes
@@ -59,7 +59,7 @@ Created Objects:
 
 As you might have noticed, the publish action creates a `RegulatedCoinMetadata` object along with the standard `CoinMetadata` object. You don't need to explicitly call the `freeze_object` on the `RegulatedCoinMetadata` object, however, because `create_regulated_currency` automatically performs this action.
 
-The output also shows the three objects that the publisher now owns: `UpgradeCap` for [package upgrades](../../../../concepts/sui-move-concepts/packages/upgrade.mdx), `TreasuryCap` for minting or burning coins, and the `DenyCap` for adding or removing addresses to or from the deny list for this coin.
+The output also shows the three objects that the publisher now owns: `UpgradeCap` for [package upgrades](../../../concepts/sui-move-concepts/packages/upgrade.mdx), `TreasuryCap` for minting or burning coins, and the `DenyCap` for adding or removing addresses to or from the deny list for this coin.
 
 ## DenyList
 
@@ -76,15 +76,9 @@ The `DenyList` object is a system object that has the address `0x403`. You canno
 
 For the ability to manipulate the addresses assigned to the deny list for your coin, you must add a few functions to the previous example.
 
-```move
-public fun add_addr_from_deny_list(denylist: &mut DenyList, denycap: &mut DenyCap<REGCOIN>, denyaddy: address, ctx: &mut TxContext){
-    coin::deny_list_add(denylist, denycap, denyaddy, ctx );
-}
+{@inject: examples/move/coin/sources/regcoin.move#fun=add_addr_from_deny_list noComments}
 
-public fun remove_addr_from_deny_list(denylist: &mut DenyList, denycap: &mut DenyCap<REGCOIN>, denyaddy: address, ctx: &mut TxContext){
-    coin::deny_list_remove(denylist, denycap, denyaddy, ctx );
-}
-```
+{@inject: examples/move/coin/sources/regcoin.move#fun=remove_addr_from_deny_list noComments}
 
 To use these functions, you pass the `DenyList` object (`0x403`), your `DenyCap` object ID, and the address you want to either add or remove. Using the Sui CLI, you could use `sui client call` with the required information:
 
