--- a/docs/content/references/cli/ptb.mdx
+++ b/docs/content/references/cli/ptb.mdx
@@ -125,6 +125,21 @@ All the following examples were tested using a `bash` shell environment and your
 
 :::
 
+### Types
+
+CLI PTBs requires in some cases to specify the type of a specific value / variable. For example, in the example below the `"<u64>"` type is required when calling the `0x1::option::is_none` function.
+```bash
+sui client ptb \
+--assign my_variable none \
+--move-call 0x1::option::is_none "<u64>" my_variable \
+--gas-budget 50000000
+```
+
+If you need to pass in multiple types, you can simply do so by delimiting them with a comma:
+```bash
+--move-call package::module::function "<u64,u8,u256>"
+```
+
 ### Strings
 
 CLI PTBs support string literals as inputs, which will be encoded as pure values that can be used as inputs to `vector<u8>`, `std::ascii::String` and `std::string::String` parameters. The following example previews a transaction block that passes the string `"Hello, world"` to a function `m::f` in a package `$PKG` (its ID is held in an environment variable).
