--- a/sdk/docs/pages/typescript/cryptography/multisig.mdx
+++ b/sdk/docs/pages/typescript/cryptography/multisig.mdx
@@ -64,3 +64,70 @@ const combinedSignature = multiSigPublicKey.combinePartialSignatures([signature1
 
 const isValid = await multiSigPublicKey.verifyPersonalMessage(message, combinedSignature);
 ```
+
+## Multisig with zkLogin
+
+zkLogin can be used to participate in multisig just like keys for other signature schemes. Unlike
+other keys that come with a public key, we define a public identifier for zkLogin.
+
+For example, a 1-out-of-2 multisig with a single key and a zkLogin public identifier is created as
+follows:
+
+```typescript
+// a single Ed25519 keypair and its public key.
+const kp1 = new Ed25519Keypair();
+const pkSingle = kp1.getPublicKey();
+
+// compute the address seed based on user salt and jwt token values.
+const decodedJWT = decodeJwt('a valid jwt token here');
+const userSalt = BigInt('123'); // a valid user salt
+const addressSeed = genAddressSeed(userSalt, 'sub', decodedJwt.sub, decodedJwt.aud).toString();
+
+// a zkLogin public identifier derived from an address seed and an iss string.
+let pkZklogin = toZkLoginPublicIdentifier(addressSeed, decodedJwt.iss);
+
+// derive multisig address from multisig public key defined by the single key and zkLogin public
+// identifier with weight and threshold.
+const multiSigPublicKey = MultiSigPublicKey.fromPublicKeys({
+	threshold: 1,
+	publicKeys: [
+		{ publicKey: pkSingle, weight: 1 },
+		{ publicKey: pkZklogin, weight: 1 },
+	],
+});
+
+// this is the sender of any transactions from this multisig account.
+const multisigAddress = multiSigPublicKey.toSuiAddress();
+
+// create a regular zklogin signature from the zkproof and ephemeral signature for zkLogin.
+// See zklogin-integration.mdx for more details.
+const zkLoginSig = getZkLoginSignature({
+	inputs: zkLoginInputs,
+	maxEpoch: '2',
+	userSignature: fromB64(ephemeralSig),
+});
+
+// a valid multisig with just the zklogin signature.
+const multisig = multiSigPublicKey.combinePartialSignatures([zkLoginSig]);
+```
+
+### Benefits and Design for zkLogin in Multisig
+
+Because zkLogin assumes the application client ID and its issuer (e.g. Google)'s liveliness, using
+zkLogin with multisig provides improved recoverability to a zkLogin account. In the above example of
+1-out-of-2 multisig, user can use zkLogin in their regular wallet flow, but if the application
+and/or the issuer is deprecated, the user can still use the regular private key account to access
+funds in the multisig wallet.
+
+This also opens the doors to design multisig across any numbers of zkLogin accounts and of different
+providers (max number is capped at 10 accounts) with customizable weights and threshold. For
+example, one can set up a multisig address with threshold as 2, where the public keys or identifiers
+are defined as:
+
+1. His own Google account with weight 2
+2. His friend Alice's Apple account with weight 1
+3. His friend Bob's Facebook account with weight 1
+
+In this case, he can always use his Google account for transactions out of the multisig address for
+the threshold. At the same time, he still have access to his account by combining partial signatures
+from Alice and Bob.
