--- a/docs/content/concepts/cryptography/zklogin.mdx
+++ b/docs/content/concepts/cryptography/zklogin.mdx
@@ -308,7 +308,7 @@ The following options support a zkLogin signature over either transaction data o
 
 1. Use Sui Typescript SDK. This initializes a GraphQL client and calls the endpoint under the hood.
 
-1. Use the GraphQL endpoint directly: `https://sui-[network].mystenlabs.com/graphql`, changing `[network]` to the appropraite value. See the <a href="/references/sui-api/sui-graphql/reference/api/queries/verify-zklogin-signature" data-noBrokenLinkCheck="true">GraphQL documenetation</a> for more details. This is recommended if you do not plan to run any servers or handle any JWK rotations. 
+1. Use the GraphQL endpoint directly: `https://sui-[network].mystenlabs.com/graphql`, changing `[network]` to the appropriate value. See the <a href="/references/sui-api/sui-graphql/reference/api/queries/verify-zklogin-signature" data-noBrokenLinkCheck="true">GraphQL documentation</a> for more details. This is recommended if you do not plan to run any servers or handle any JWK rotations. 
 
 1. Use the [Sui Keytool CLI](../../references/cli/keytool.mdx). This is recommended for debug usage. 
 
@@ -316,7 +316,7 @@ The following options support a zkLogin signature over either transaction data o
    $SUI_BINARY keytool zk-login-sig-verify --sig $ZKLOGIN_SIG --bytes $BYTES --intent-scope 3 --network devnet --curr-epoch 3
    ```
 
-1. Use a self-hosted server endpoint and call this endpoint, as decribed in [zklogin-verifier](https://github.com/MystenLabs/zklogin-verifier). This provides logic flexibility.
+1. Use a self-hosted server endpoint and call this endpoint, as described in [zklogin-verifier](https://github.com/MystenLabs/zklogin-verifier). This provides logic flexibility.
 
 ### Can I use zkLogin inside a multisig wallet? 
 
